<resources>
    <string name="app_name">Nom Nom</string>
    <string name="btn1">Login</string>
    <string name="btn2">Sign Up</string>
    <string name="login1">Login</string>
    <string name="register1">Register</string>
    <string name="menu">Menu</string>
    <string name="feedback">Feedback</string>
    <string name="contactus">Contact us</string>
    <string name="send">Send</string>
    <string name="registerNow">Register Now</string>
    <string name="order">Order Now</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="foodName">Food Name</string>
    <string name="text1">Welcome to Nom Nom</string>
    <string name="text2">Life is like a restaurant; you can have anything you want as long as you are willing to pay the price.</string>
    <string name="text3">Not Registered?</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="text4">When you are here, you are family..</string>
    <string name="placeOrder">Place Your Order</string>
    <string name="address">Address</string>
    <string name="view">View Feedback</string>
    <string name="contact">Contact Number</string>
    <string name="quantity">Quantity</string>
    <string name="yourOrder">Your Orders</string>
    <string name="viewOrder">View Orders</string>
    <string name="editOrder">Edit Order</string>
    <string name="deleteOrder">Delete Order</string>
    <string name="orderId">Order ID</string>
    <string name="editBook">Edit Booking</string>
    <string name="CancelBook">Delete Order</string>
    <string name="editId">EditId</string>
    <string name="already_registered">Already registered?</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="listFeedback">List Feedback</string>
    <string name="deletefeed">Delete Feedback</string>
    <string name="updatefeed">Update Feedback</string>
    <string name="registerFunctions">User List</string>
    <string name="deleteUser">Delete Users</string>
    <string name="listUser">List Users</string>
    <string name="updateUser">Update Users</string>
    <string name="bookHall">Book Your Hall</string>
    <string name="name1">Name</string>
    <string name="contact1">Contact Number</string>
    <string name="des">Description</string>
    <string name="people">Number of People</string>
    <string name="btnBook">Book Now</string>
    <string name="viewBook">View Bookings</string>
    <string name="yourBooking">Your Bookings</string>
    <string name="deleteBook">Cancel Booking</string>
    <string name="aboutnom2">About Nom Nom</string>
    <string name="intro1">Loved by you, delivered by us..!!!</string>
    <string name="intro2">For us, it\'s not about bringing you good food from your favourite menu. It\'s about making a connection, which is why we sit down with our chefs, dreaming up the menus that will arrive fresh and full of flavour... TRY US!!! </string>
    <string name="place">Place Order</string>
    <string name="add">108/26, Nom nom restaurant, Villa road, Colombo 07</string>
    <string name="mail">nomnom@gmail.com</string>
    <string name="num1">011-5555667</string>
    <string name="num2">011-5555666</string>
</resources>
