<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a13"
    tools:context=".AboutUs">

    <TextView
        android:id="@+id/aboutnom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="@string/aboutnom2"
        android:textColor="#DFE2DF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro1"
        android:layout_width="415dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/intro1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#00FF3F"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutnom2" />

    <TextView
        android:id="@+id/intro2"
        android:layout_width="384dp"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#83E9E2E2"
        android:fontFamily="sans-serif-medium"
        android:text="@string/intro2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro1" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="#7A0EF80E"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro2" />

    <Button
        android:id="@+id/contactus"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="#7A0EF80E"
        android:text="@string/contactus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback"
        app:layout_constraintVertical_bias="0.006" />


</androidx.constraintlayout.widget.ConstraintLayout>